# dierenasiel-alert

./: .dockerignore  .gitignore  Dockerfile  MONITORING.md  README.md  dierenasiel-alert.service  monitor.sh  pyproject.toml  requirements.txt
.github/workflows/: build-release.yaml
k8s/: cronjob.yaml
src/dierenasiel_alert/: __init__.py  cli.py  notify.py  report.py  scraper.py  store.py
